<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Onboarding_Pages.UserLogin">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/app_name"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_marginTop="-30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="300dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/safeme_logo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </ImageView>

            <TextView
                android:id="@+id/logo_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-20dp"
                android:fontFamily="@font/poppins_extrabold"
                android:text="@string/login_txt1"
                android:textColor="#000"
                android:textSize="40sp"
                android:transitionName="logo_text" />

            <TextView
                android:id="@+id/slogan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/login_txt2"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:textSize="18sp"
                android:transitionName="slogan_text" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/Username"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/user_name"
                app:boxStrokeColor="#000"
                android:transitionName="username_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    app:strokeColor="@android:color/white">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/Password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pass"
                app:boxStrokeColor="#000"                app:passwordToggleEnabled="true"
                android:transitionName="password_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>
                <Button
                    android:id="@+id/reset_password"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_margin="5dp"
                    android:background="#00000000"
                    android:elevation="0dp"
                    android:onClick="gotoResetPassword"
                    android:text="@string/forget_pass"
                    android:textColor="#000000"
                    android:transitionName="forget_password_text" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:visibility="gone"
                android:layout_height="wrap_content" />
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/LoginBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="#000"
                    android:text="@string/login"
                    android:transitionName="btn_go"
                    app:backgroundTint="@null"
                    app:layout_constraintBottom_toBottomOf="@+id/binanceJsonViewButton"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/binanceJsonViewButton"
                    app:layout_constraintTop_toTopOf="@+id/binanceJsonViewButton" />



            <Button
                android:id="@+id/DoctorSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:background="#00000000"
                android:elevation="0dp"
                android:onClick="gotoUserRegister"
                android:text="@string/register"
                android:textColor="#000000"
                android:transitionName="btn_move" />
        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>